...
    onOpenAdvancedInfo: ((SkyInfoMetrics) -> Unit)?
) {
    Box(
        modifier = Modifier
            .fillMaxWidth()
            .height(200.dp)
            .testTag("sky_top_bar")
    ) {
        SkyAppBarBackground(
            sunrise = sunrise,
            sunset = sunset,
            moonRise = moonRise,
            moonSet = moonSet,
...
